[tool.poetry]
name = "async-iamport"
version = "0.1.1"
description = ""
authors = ["한바름 <rumbarum@gmail.com>"]
readme = "README.md"
packages = [{include = "async_iamport"}]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"
arrow = "^1.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
pytest-asyncio = "^0.20.3"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "v$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
